Closed
Bug 383406
Opened 19 years ago
Closed 19 years ago
Firefox crashed when add bookmark with Orca running [@nsXULSelectableAccessible::RefSelection]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)
Details
(4 keywords)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1.22 KB,
patch
|
neil
:
superreview+
dveditz
:
approval1.8.1.5+
dveditz
:
approval1.8.0.13+
|
Details | Diff | Splinter Review |
1)On Solaris Express snv_64a, turn on gnome a11y support
2)Open Orca, keep it running behind
3)Open Firefox 2, press Ctrl+D, "Add Bookmark" dialog shows
4)Click "Add" button in "Add Bookmark" dialog
5)Crash
Flags: blocking1.8.1.5?
Flags: blocking1.8.0.13?
Attachment #267364 -
Flags: superreview?
Attachment #267364 -
Flags: review?(aaronleventhal)
Attachment #267364 -
Flags: superreview? → superreview?(neil)
Comment 2•19 years ago
|
||
Comment on attachment 267364 [details] [diff] [review]
patch for 1.8 branch
That's fine, or you could just remove tempAccess and do:
return accService->GetAccessibleInWeakShell(tempDOMNode, mWeakShell, &_retval);
No big deal, since this is just patching branch.
Attachment #267364 -
Flags: review?(aaronleventhal) → review+
Attachment #267364 -
Attachment is obsolete: true
Attachment #267368 -
Flags: superreview?(neil)
Attachment #267364 -
Flags: superreview?(neil)
Comment 4•19 years ago
|
||
Comment on attachment 267368 [details] [diff] [review]
patch for 1.8 branch
Removing tempAccess sounds like a better idea.
Attachment #267368 -
Flags: superreview?(neil) → superreview+
Updated•19 years ago
|
Flags: blocking1.8.1.5?
Flags: blocking1.8.1.5+
Flags: blocking1.8.0.13?
Flags: blocking1.8.0.13+
Attachment #267368 -
Flags: approval1.8.1.5?
Attachment #267368 -
Flags: approval1.8.0.13?
Comment 5•19 years ago
|
||
Comment on attachment 267368 [details] [diff] [review]
patch for 1.8 branch
approved for 1.8.1.5 and 1.8.0.13, a=dveditz for release-drivers
Attachment #267368 -
Flags: approval1.8.1.5?
Attachment #267368 -
Flags: approval1.8.1.5+
Attachment #267368 -
Flags: approval1.8.0.13?
Attachment #267368 -
Flags: approval1.8.0.13+
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.0.13,
fixed1.8.1.5
Resolution: --- → FIXED
Comment 6•19 years ago
|
||
Emily, Alfred, could you take a look at this Bug. Can you verify fixed this bug on a 2.0.0.5 Nightly Build ?
Do we have nightly Solaris build for 1.8 branch?
We should have.
Updated•15 years ago
|
Crash Signature: [@nsXULSelectableAccessible::RefSelection]
You need to log in
before you can comment on or make changes to this bug.
Description
•