Bug 383406 Firefox crashed when add bookmark with Orca running [@nsXULSelectableAccessible::RefSelection] r=aaronleventhal sr=neil a=dveditz